--- a/assets/package.json
+++ b/assets/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@apollo/client": "^3.5.6",
+    "apollo-absinthe-upload-link": "^1.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
