--- a/assets/package.json
+++ b/assets/package.json
@@ -3,6 +3,7 @@
     "@apollo/client": "^3.5.6",
     "apollo-absinthe-upload-link": "^1.7.0",
     "react": "^18.2.0",
+    "react-data-grid": "^7.0.0-beta.13",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
